fix(SLW-5994): button bottom align

--- a/src/index.css
+++ b/src/index.css
@@ -103,10 +103,6 @@ button:focus-visible {
     display: flex;
     flex-direction: column;
 
-    > div:last-child {
-      margin-top: 12px;
-    }
-
     > div:nth-child(2) {
       overflow: auto;
     }
